--- a/index.html
+++ b/index.html
@@ -383,9 +383,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-sm-12 col-md-3">
                     <div class="bloco-endereco">
                         <strong>Assistência Técnica:</strong>
-                        <span>Segunda a sexta: das 09:00 às 17:30.</span>                       
-                        <span>Telefone: (21) 2524-2461</span>
-                        <span>Endereço: R. República do Líbano, 61 - sala 1110 - Centro, Rio de Janeiro - RJ, 20061-030</span>
+                        <span>Segunda a sexta: das 08:00 às 18:00.</span>                       
+                        <span>Telefone: (11)3171-0549 whatsapp (11) 91000-8056</span>
+                        <span>Endereço: R JOAQUIM DIAS BICALHO, 45
+                            Bairro RIO PEQUENO
+                            Cidade São Paulo
+                            CEP 05.388-160</span>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-3">
@@ -397,7 +400,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
 
             <hr />
-            <p class="direitos">© 2019 Revenda Mais Verde - Todos os direitos reservados. </p>
+            <p class="direitos">© 2022 Sotel Sistemas - Todos os direitos reservados. </p>
         </div>
     </footer>
 
