--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <strong>Assistência Técnica:</strong>
                       <span>Segunda a sexta: das 08:00 às 18:00.</span>                       
                         <span>Telefone: (11)3171-0549 whatsapp (11) 91000-8056</span>
-                        <span>Endereço: R JOAQUIM DIAS BICALHO,45 Bairro RIO Pequeno Cidade São Paulo  CEP 05.388-160</span>
+                        <span>Endereço: R Joaquim Dias Bicalho,45 Bairro Rio Pequeno Cidade São Paulo  CEP 05.388-160</span>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-3">
