alteração CONHEÇA NOSSA LOJA

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="#solucoes">Soluções</a></li>
                             <li class="nav-item"><a class="nav-link" href="#novidades">Novidades</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#videos">Videos</a></li>                            
+                            <li class="nav-item"><a class="nav-link" href="#Locação">Locação</a></li>                            
                         </ul>
                         <ul class="listTOP">
                             <li>
@@ -68,7 +68,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </ul>                        
                     </div>
                 </nav>
-                <!-- <a href="https://wa.me/5521996623704" class="whatsapp" target="_blank">WhatsApp: (21) 99662-3704</a> -->
+                <!-- <a href="https://wa.me/5511910008056" class="whatsapp" target="_blank">WhatsApp: (11) 910008056</a> -->
             </div>
         </div>
     </div>
@@ -342,7 +342,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="row">
             <div class="col-12 col-md-12 wow fadeInDown">
             <div class="boxHomeQuemSomos text-center">
-                <h3>Conheça Nossa Loja</h3>
+                <h3>Solução Completa</h3>
             </div>
         </div>
         </div>
