--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                         <div id="formulario">
                             <h3>Solicite seu Orçamento</h3>
-                            <form action="https://www.revendamaisverde.com.br/form5.php" method="post">
+                            <form action="https://www.sotel.com.br/form5.php" method="post">
                                 <input name="nome" type="text" class="iptForm" placeholder="Nome" required="required">
                                 <input name="email" type="email" class="iptForm" placeholder="E-mail" required="required">                              
                                 <input name="telefone" type="text" class="iptForm" placeholder="Telefone" required="required">
@@ -184,7 +184,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row">
                 <div class="col-md-5">
                     <div class="textBanner">
-                        <h3 class="animated">MONITORAMENTO WIFI IC7</h3>
+                        <h3 class="animated">MONITORAMENTO CAMERAS WIFI IC7</h3>
                         <p class="animated">Solução completa de monitoramento 360º com sistema de alarme integrado.</p>
                     </div>
                 </div>
@@ -200,7 +200,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div id="dialog2" class="window">               
                         <div id="formulario">
                             <h3>Solicite seu Orçamento</h3>
-                            <form action="https://www.revendamaisverde.com.br/form5.php" method="post">
+                            <form action="https://www.sotel.com.br/form5.php" method="post">
                                 <input name="nome" type="text" class="iptForm" placeholder="Nome" required="required">
                                 <input name="email" type="email" class="iptForm" placeholder="E-mail" required="required">                              
                                 <input name="telefone" type="text" class="iptForm" placeholder="Telefone" required="required">
@@ -227,27 +227,27 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                    <div class='embed-container'> <iframe width="359" height="650" src="https://www.youtube.com/embed/JlSpRukjbpw?&autoplay=1"  class="wow fadeInUp" data-wow-delay="0.5s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 </div>
                 <div class="">                        
-                    <img src="https://www.revendamaisverde.com.br/img/slide/2.png" alt="" class="img-slide img-fluid wow fadeInUp" data-wow-delay="0.6s">                      
-                    <img src="https://www.revendamaisverde.com.br/img/slide/3.png" alt="" class="img-slide img-fluid wow fadeInUp" data-wow-delay="0.7s">                      
+                    <img src="https://www.sotel.com.br/img/slide/2.png" alt="" class="img-slide img-fluid wow fadeInUp" data-wow-delay="0.6s">                      
+                    <img src="https://www.sotel.com.br/img/slide/3.png" alt="" class="img-slide img-fluid wow fadeInUp" data-wow-delay="0.7s">                      
                 </div>
                 <div class="">                        
-                    <img src="https://www.revendamaisverde.com.br/img/slide/4.png" alt="" class="img-slide img-fluid wow fadeInUp" data-wow-delay="0.8s">                      
-                    <img src="https://www.revendamaisverde.com.br/img/slide/5.png" alt="" class="img-slide img-fluid wow fadeInUp" data-wow-delay="0.9s">                      
+                    <img src="https://www.sotel.com.br/img/slide/4.png" alt="" class="img-slide img-fluid wow fadeInUp" data-wow-delay="0.8s">                      
+                    <img src="https://www.sotel.com.br/img/slide/5.png" alt="" class="img-slide img-fluid wow fadeInUp" data-wow-delay="0.9s">                      
                 </div>
                 <div class="">                        
-                    <img src="https://www.revendamaisverde.com.br/img/slide/6.png" alt="" class="img-slide img-fluid wow fadeInUp" data-wow-delay="0.8s">
+                    <img src="https://www.sotel.com.br/img/slide/6.png" alt="" class="img-slide img-fluid wow fadeInUp" data-wow-delay="0.8s">
                 </div>
                 <div class="">                        
-                    <img src="https://www.revendamaisverde.com.br/img/slide/7.png" alt="" class="img-slide img-fluid wow fadeInUp" data-wow-delay="0.8s">
+                    <img src="https://www.sotel.com.br/img/slide/7.png" alt="" class="img-slide img-fluid wow fadeInUp" data-wow-delay="0.8s">
                 </div>
                 <div class="">                        
-                    <img src="https://www.revendamaisverde.com.br/img/slide/8.png" alt="" class="img-slide img-fluid wow fadeInUp" data-wow-delay="0.8s">
+                    <img src="https://www.sotel.com.br/img/slide/8.png" alt="" class="img-slide img-fluid wow fadeInUp" data-wow-delay="0.8s">
                 </div>
                 <div class="">                        
-                    <img src="https://www.revendamaisverde.com.br/img/slide/9.png" alt="" class="img-slide img-fluid wow fadeInUp" data-wow-delay="0.8s">
+                    <img src="https://www.sotel.com.br/img/slide/9.png" alt="" class="img-slide img-fluid wow fadeInUp" data-wow-delay="0.8s">
                 </div>
                 <div class="">                        
-                    <img src="https://www.revendamaisverde.com.br/img/slide/10.png" alt="" class="img-slide img-fluid wow fadeInUp" data-wow-delay="0.8s">
+                    <img src="https://www.sotel.com.br/img/slide/10.png" alt="" class="img-slide img-fluid wow fadeInUp" data-wow-delay="0.8s">
                 </div>
             </div> -->
 
