--- a/index.html
+++ b/index.html
@@ -345,19 +345,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="row">
         <div class="col-12">
             <ul class="slideGallery">
-                <li class="itemGallery">
+                <!-- <li class="itemGallery">
                     <a>
                         <video width="320" height="240" controls>
                             <source src="img/widevoice-video.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                         </video>
                     </a>
-                </li>
-                <li class="itemGallery"><a href="img/galeria/0.jpg" data-lightbox="roadtrip"><img src="img/galeria/0.jpg" alt="Img1" class="img-fluid"></a></li>
-                <li class="itemGallery"><a href="img/galeria/0.jpg" data-lightbox="roadtrip"><img src="img/galeria/0.jpg" alt="Img2" class="img-fluid"></a></li>
-                <li class="itemGallery"><a href="img/galeria/0.jpg" data-lightbox="roadtrip"><img src="img/galeria/0.jpg" alt="Img3" class="img-fluid"></a></li>
-                <li class="itemGallery"><a href="img/galeria/0.jpg" data-lightbox="roadtrip"><img src="img/galeria/0.jpg" alt="Img4" class="img-fluid"></a></li>
-                <li class="itemGallery"><a href="img/galeria/0.jpg" data-lightbox="roadtrip"><img src="img/galeria/0.jpg" alt="Img5" class="img-fluid"></a></li>
+                </li> -->
+                <li class="itemGallery"><a href="img/galeria/1.jpg" data-lightbox="roadtrip"><img src="img/galeria/1.jpg" alt="Img1" class="img-fluid"></a></li>
+                <li class="itemGallery"><a href="img/galeria/2.jpg" data-lightbox="roadtrip"><img src="img/galeria/2.jpg" alt="Img2" class="img-fluid"></a></li>
+                <li class="itemGallery"><a href="img/galeria/3.jpg" data-lightbox="roadtrip"><img src="img/galeria/3.jpg" alt="Img3" class="img-fluid"></a></li>
+                <li class="itemGallery"><a href="img/galeria/4.jpg" data-lightbox="roadtrip"><img src="img/galeria/4.jpg" alt="Img4" class="img-fluid"></a></li>
+                <li class="itemGallery"><a href="img/galeria/5.jpg" data-lightbox="roadtrip"><img src="img/galeria/5.jpg" alt="Img5" class="img-fluid"></a></li>
             </ul>
         </div>
     </div>
