alteração do verde e remoção do link widecloud

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="#solucoes">Soluções</a></li>
                             <li class="nav-item"><a class="nav-link" href="#novidades">Novidades</a></li>
-                            <li class="nav-item"><a class="nav-link" href="widecloud/index.html">Wide Cloud</a></li>                            
+                            <!-- <li class="nav-item"><a class="nav-link" href="widecloud/index.html">Wide Cloud</a></li>                             -->
                         </ul>
                         <ul class="listTOP">
                             <li>
