--- a/index.html
+++ b/index.html
@@ -85,10 +85,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div id="dialog2" class="window">                   
-                    <iframe name="dummyframe" id="dummyframe" >teste</iframe>
                     <div id="formulario">
                         <h3>Solicite seu Orçamento</h3>
-                        <form target="dummyframe" action="https://usebasin.com/f/9acce5ff0b70"
+                        <form target="_blank" action="https://usebasin.com/f/9acce5ff0b70"
                             method="POST"
                             enctype="multipart/form-data"
                             id="form">
@@ -228,9 +227,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div id="boxes" class="nonescreen mobileon wow fadeInUp">
     <div id="dialog2" class="window">               
         <div id="formulario">
-            <iframe name="dummyframe" id="dummyframe" style="display: none"></iframe>
             <h3>Solicite seu Orçamento</h3>
-            <form target="dummyframe" action="https://usebasin.com/f/9acce5ff0b70"
+            <form target="_blank" action="https://usebasin.com/f/9acce5ff0b70"
                 method="POST"
                 enctype="multipart/form-data"
                 id="form">
