alteração texto camera termica

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row">
                 <div class="col-md-5">
                     <div class="textBanner">
-                        <h3 class="animated">Térmicas COVID-19</h3>
-                        <p class="animated">Agilidade e controle no cumprimento das recomendações da OMS.</p>
+                        <h3 class="animated">Térmicas</h3>
+                        <p class="animated">Agilidade e controle em Projetos Especiais.</p>
                     </div>
                 </div>
             </div>
