alteração texto ct

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row">
                 <div class="col-md-5">
                     <div class="textBanner">
-                        <h3 class="animated">Térmicas</h3>
+                        <h3 class="animated">Câmera Térmica</h3>
                         <p class="animated">Agilidade e controle em Projetos Especiais.</p>
                     </div>
                 </div>
