alteração texto banner

--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row">
                 <div class="col-md-5">
                     <div class="textBanner">
-                        <h3 class="animated">MONITORAMENTO CAMERAS WIFI IC7</h3>
-                        <p class="animated">Solução completa de monitoramento 360º com sistema de alarme integrado.</p>
+                        <h3 class="animated">Câmera Full Color</h3>
+                        <p class="animated">Sensor com alta sensibilidade, capaz de gerar imagens coloridas 24 horas em ambiente sem qualquer luminosidadeSolução completa de monitoramento 360º com sistema de alarme integrado.</p>
                     </div>
                 </div>
             </div>
