alteração texto fullcolor

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-md-5">
                     <div class="textBanner">
                         <h3 class="animated">Câmera Full Color</h3>
-                        <p class="animated">Sensor com alta sensibilidade, capaz de gerar imagens coloridas 24 horas em ambiente sem qualquer luminosidadeSolução completa de monitoramento 360º com sistema de alarme integrado.</p>
+                        <p class="animated">Imagens coloridas 24 horas em ambiente sem qualquer luminosidade.</p>
                     </div>
                 </div>
             </div>
