--- a/index.html
+++ b/index.html
@@ -189,6 +189,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
         </div>
     </div>
+    <div class="item banner5">
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5">
+                    <div class="textBanner">
+                        <h3 class="animated">Locação</h3>
+                        <p class="animated">Tenha as melhores tecnologias para o seu negócio.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="item banner6">
         <div class="overlay"></div>
         <div class="container">
