--- a/index.html
+++ b/index.html
@@ -203,6 +203,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
     </div>
 </div>
+<div class="item banner7">
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-5">
+                <div class="textBanner">
+                    <h3 class="animated">Câmera Full Color</h3>
+                    <p class="animated">Imagens coloridas 24 horas em ambiente sem qualquer luminosidade.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
 <!-- <div id="boxes" class="blscreen">
     <div id="dialog2" class="window">                   
         <iframe name="dummyframe" id="dummyframe" style="display: none"></iframe>
