--- a/index.html
+++ b/index.html
@@ -189,28 +189,28 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
         </div>
     </div>
-    <div class="item banner6">
+    <div class="item banner5">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
                 <div class="col-md-5">
                     <div class="textBanner">
-                        <h3 class="animated">Câmera Full Color</h3>
-                        <p class="animated">Imagens coloridas 24 horas em ambiente sem qualquer luminosidade.</p>
+                        <h3 class="animated">Fechadura Digital</h3>
+                        <p class="animated">Sua segurança nas pontas dos dedos com elegância.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div class="item banner7">
+<div class="item banner5">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
             <div class="col-md-5">
                 <div class="textBanner">
-                    <h3 class="animated">Câmera Full Color</h3>
-                    <p class="animated">Imagens coloridas 24 horas em ambiente sem qualquer luminosidade.</p>
+                    <h3 class="animated">Fechadura Digital</h3>
+                    <p class="animated">Sua segurança nas pontas dos dedos com elegância.</p>
                 </div>
             </div>
         </div>
