alteraçã texto banner

--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row">
                 <div class="col-md-5">
                     <div class="textBanner">
-                        <h3 class="animated">Fechadura Digital</h3>
-                        <p class="animated">Sua segurança nas pontas dos dedos com elegância.</p>
+                        <h3 class="animated">Câmera Full Color</h3>
+                        <p class="animated">Imagens coloridas em ambientes sem nenhuma claridade.</p>
                     </div>
                 </div>
             </div>
