--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </div>
         </div>
+    </div>
 
      <div class="item banner6">
         <div class="overlay"></div>
