--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-md-5">
                     <div class="textBanner">
                         <h3 class="animated">Mais Novidades</h3>
-                        <p class="animated">Soluções em energia solar para seus projetos.</p>
+                        <p class="animated">Soluções em energia solar para seus projetos.
+                            Saiba mais 11 91000-8056
+                        </p>
                     </div>
                 </div>
             </div>
