--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="textBanner">
                         <h3 class="animated">Mais Novidades</h3>
                         <p class="animated">Soluções em energia solar para seus projetos.
-                            Saiba mais 11 91000-8056
+                            Saiba mais 11 91 000-8056
                         </p>
                     </div>
                 </div>
