--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-md-5">
                     <div class="textBanner">
                         <h3 class="animated">Mais Novidades</h3>
-                        <p class="animated">Soluções em energia solar para seus projetos.Saiba mais 11 91000-8056    </p>
+                        <p class="animated">Soluções em energia solar para seus projetos.Saiba mais 11 91000-8056</p>
                     </div>
                 </div>
             </div>
@@ -130,7 +130,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-md-5">
                     <div class="textBanner">
                         <h3 class="animated">Câmera Térmica</h3>
-                        <p class="animated">Agilidade e controle em Projetos Especiais.</p>
+                        <p class="animated">Agilidade e controle em Projetos Especiais.Saiba mais 11 91000-8056</p>
                     </div>
                 </div>
             </div>
@@ -143,7 +143,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-md-5">
                     <div class="textBanner">
                         <h3 class="animated">Prediotech</h3>
-                        <p class="animated">Soluções ideais para administração completa de condomínios.</p>
+                        <p class="animated">Soluções ideais para administração completa de condomínios.Saiba mais 11 91000-8056</p>
                     </div>
                 </div>
             </div>
@@ -156,7 +156,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-md-5">
                     <div class="textBanner">
                         <h3 class="animated">Rede <br> sem fio</h3>
-                        <p class="animated">Soluções de sistema a rádio para pequenas e grandes distâncias.</p>
+                        <p class="animated">Soluções de sistema a rádio para pequenas e grandes distâncias.Saiba mais 11 91000-8056</p>
                     </div>
                 </div>
             </div>
@@ -169,7 +169,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-md-5">
                     <div class="textBanner">
                         <h3 class="animated">4k Experiência</h3>
-                        <p class="animated">Câmeras com imagens robustas para grandes projetos.</p>
+                        <p class="animated">Câmeras com imagens robustas para grandes projetos.Saiba mais 11 91000-8056</p>
                     </div>
                 </div>
             </div>
@@ -182,7 +182,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-md-5">
                     <div class="textBanner">
                         <h3 class="animated">Fechadura Digital</h3>
-                        <p class="animated">Sua segurança nas pontas dos dedos com elegância.</p>
+                        <p class="animated">Sua segurança nas pontas dos dedos com elegância.Saiba mais 11 91000-8056</p>
                      </div>
                 </div>
             </div>
@@ -195,7 +195,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-md-5">
                     <div class="textBanner">
                         <h3 class="animated">Câmera Full Color</h3>
-                        <p class="animated">Imagens coloridas em ambientes sem nenhuma claridade.</p>
+                        <p class="animated">Imagens coloridas em ambientes sem nenhuma claridade.Saiba mais 11 91000-8056</p>
                     </div>
                 </div>
             </div>
