--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-md-5">
                     <div class="textBanner">
                         <h3 class="animated">Mais Novidades</h3>
-                        <p class="animated">Soluções em energia solar para seus projetos.Saiba mais 11 91000-8056</p>
+                        <p class="animated">Soluções em energia solar para seus projetos.  Saiba mais 11 91000-8056</p>
                     </div>
                 </div>
             </div>
@@ -130,7 +130,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-md-5">
                     <div class="textBanner">
                         <h3 class="animated">Câmera Térmica</h3>
-                        <p class="animated">Agilidade e controle em Projetos Especiais.Saiba mais 11 91000-8056</p>
+                        <p class="animated">Agilidade e controle em Projetos Especiais.  Saiba mais 11 91000-8056</p>
                     </div>
                 </div>
             </div>
@@ -143,7 +143,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-md-5">
                     <div class="textBanner">
                         <h3 class="animated">Prediotech</h3>
-                        <p class="animated">Soluções ideais para administração completa de condomínios.Saiba mais 11 91000-8056</p>
+                        <p class="animated">Soluções ideais para administração completa de condomínios.  Saiba mais 11 91000-8056</p>
+                        <p class="animated">Saiba mais 11 91000-8056</p>
                     </div>
                 </div>
             </div>
