--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-md-5">
                     <div class="textBanner">
                         <h3 class="animated">Prediotech</h3>
-                        <p class="animated">Soluções ideais para administração completa de condomínios.  Saiba mais 11 91000-8056</p>
+                        <p class="animated">Soluções ideais para administração completa de condomínios.</p>
                         <p class="animated">Saiba mais 11 91000-8056</p>
                     </div>
                 </div>
