--- a/index.html
+++ b/index.html
@@ -143,8 +143,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-md-5">
                     <div class="textBanner">
                         <h3 class="animated">Prediotech</h3>
-                        <p class="animated">Soluções ideais para administração completa de condomínios.</p>
-                                 <p class="animated">Saiba mais 11 91000-8056</h3>
+                        <p class="animated">Soluções ideais para administração completa de condomínios.  Saiba mais 11 91000-8056</p>
                     </div>
                 </div>
             </div>
@@ -170,7 +169,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-md-5">
                     <div class="textBanner">
                         <h3 class="animated">4k Experiência</h3>
-                        <p class="animated">Câmeras com imagens robustas para grandes projetos.Saiba mais 11 91000-8056</p>
+                        <p class="animated">Câmeras com imagens robustas para grandes projetos.  Saiba mais 11 91000-8056</p>
                     </div>
                 </div>
             </div>
@@ -183,7 +182,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-md-5">
                     <div class="textBanner">
                         <h3 class="animated">Fechadura Digital</h3>
-                        <p class="animated">Sua segurança nas pontas dos dedos com elegância.Saiba mais 11 91000-8056</p>
+                        <p class="animated">Sua segurança nas pontas dos dedos com elegância.  Saiba mais 11 91000-8056</p>
                      </div>
                 </div>
             </div>
@@ -196,7 +195,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-md-5">
                     <div class="textBanner">
                         <h3 class="animated">Câmera Full Color</h3>
-                        <p class="animated">Imagens coloridas em ambientes sem nenhuma claridade.Saiba mais 11 91000-8056</p>
+                        <p class="animated">Imagens coloridas em ambientes sem nenhuma claridade.  Saiba mais 11 91000-8056</p>
                     </div>
                 </div>
             </div>
