--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-md-5">
                     <div class="textBanner">
                         <h3 class="animated">Câmera Full Color</h3>
-                        <p class="animated">Imagens coloridas em ambientes sem nenhuma claridade.  Saiba mais 11 91000-8056</p>
+                        <p class="animated">Imagens coloridas em ambientes sem nenhuma claridade.</p>
+                        <h3 class="animated">Saiba mais 11 91000-8056</h3>
                     </div>
                 </div>
             </div>
