--- a/index.html
+++ b/index.html
@@ -182,7 +182,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-md-5">
                     <div class="textBanner">
                         <h3 class="animated">Fechadura Digital</h3>
-                        <p class="animated">Sua segurança nas pontas dos dedos com elegância.  Saiba mais 11 91000-8056</p>
+                        <p class="animated">Sua segurança nas pontas dos dedos com elegância.</p>
+                        <p class="animated">Saiba mais</p3>
+                            <p class="animated">11 91000-8056</p3>
                      </div>
                 </div>
             </div>
