--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-md-5">
                     <div class="textBanner">
                         <h3 class="animated">Mais Novidades</h3>
-                        <p class="animated">Soluções em energia solar para seus projetos.  Saiba mais 11 91000-8056</p>
+                        <p class="animated">Soluções em energia solar para seus projetos.</p>
+                        <p class="animated">Saiba mais</p3>
+                            <p class="animated">11 91000-8056</p3>
                     </div>
                 </div>
             </div>
@@ -130,7 +132,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-md-5">
                     <div class="textBanner">
                         <h3 class="animated">Câmera Térmica</h3>
-                        <p class="animated">Agilidade e controle em Projetos Especiais.  Saiba mais 11 91000-8056</p>
+                        <p class="animated">Agilidade e controle em Projetos Especiais.</p>
+                        <p class="animated">Saiba mais</p3>
+                            <p class="animated">11 91000-8056</p3>
                     </div>
                 </div>
             </div>
@@ -143,7 +147,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-md-5">
                     <div class="textBanner">
                         <h3 class="animated">Prediotech</h3>
-                        <p class="animated">Soluções ideais para administração completa de condomínios.  Saiba mais 11 91000-8056</p>
+                        <p class="animated">Soluções ideais para administração completa de condomínios.</p>
+                        <p class="animated">Saiba mais</p3>
+                            <p class="animated">11 91000-8056</p3>
                     </div>
                 </div>
             </div>
@@ -156,7 +162,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-md-5">
                     <div class="textBanner">
                         <h3 class="animated">Rede <br> sem fio</h3>
-                        <p class="animated">Soluções de sistema a rádio para pequenas e grandes distâncias.Saiba mais 11 91000-8056</p>
+                        <p class="animated">Soluções de sistema a rádio para pequenas e grandes distâncias.</p>
+                        <p class="animated">Saiba mais</p3>
+                            <p class="animated">11 91000-8056</p3>
                     </div>
                 </div>
             </div>
@@ -169,7 +177,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-md-5">
                     <div class="textBanner">
                         <h3 class="animated">4k Experiência</h3>
-                        <p class="animated">Câmeras com imagens robustas para grandes projetos.  Saiba mais 11 91000-8056</p>
+                        <p class="animated">Câmeras com imagens robustas para grandes projetos.</p>
+                        <p class="animated">Saiba mais</p3>
+                            <p class="animated">11 91000-8056</p3>
                     </div>
                 </div>
             </div>
