--- a/index.html
+++ b/index.html
@@ -208,7 +208,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="textBanner">
                         <h3 class="animated">Câmera Full Color</h3>
                         <p class="animated">Imagens coloridas em ambientes sem nenhuma claridade.</p>
-                        <p class="animated">Saiba mais 11 91000-8056</p3>
+                        <p class="animated">Saiba mais</p3>
+                            <p class="animated">11 91000-8056</p3>
                     </div>
                 </div>
             </div>
