--- a/index.html
+++ b/index.html
@@ -217,6 +217,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 </div>
 </div>
+<div class="item banner7">
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-5">
+                <div class="textBanner">
+                    <h3 class="animated">Locação</h3>
+                    <p class="animated">Locação.</p>
+                    <p class="animated">Saiba mais</p3>
+                        <p class="animated">11 91000-8056</p3>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+</div>
 <!-- <div id="boxes" class="blscreen">
     <div id="dialog2" class="window">                   
         <iframe name="dummyframe" id="dummyframe" style="display: none"></iframe>
