--- a/index.html
+++ b/index.html
@@ -217,21 +217,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 </div>
 </div>
-<div class="item banner7">
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-5">
-                <div class="textBanner">
-                    <h3 class="animated">Locação</h3>
-                    <p class="animated">Locação.</p>
-                    <p class="animated">Saiba mais</p3>
-                        <p class="animated">11 91000-8056</p3>
+<div class="item banner6">
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5">
+                    <div class="textBanner">
+                        <h3 class="animated">Câmera Full Color</h3>
+                        <p class="animated">Imagens coloridas em ambientes sem nenhuma claridade.</p>
+                        <p class="animated">Saiba mais</p3>
+                            <p class="animated">11 91000-8056</p3>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 </div>
 </div>
 <!-- <div id="boxes" class="blscreen">
