--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
         </div>
     </div>
-    
+    </div>
  <!-- <div id="boxes" class="blscreen">
     <div id="dialog2" class="window">                   
         <iframe name="dummyframe" id="dummyframe" style="display: none"></iframe>
