alteração texto locação

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row">
                 <div class="col-md-5">
                     <div class="textBanner">
-                        <h3 class="animated">Prediotech</h3>
-                        <p class="animated">Soluções ideais para administração completa de condomínios.</p>
+                        <h3 class="animated">Locação</h3>
+                        <p class="animated">Não importa se sua empresa é um negócio local ou uma companhia global, temos a solução certa para apoiar o seu crescimento..</p>
                         <p class="animated">Saiba mais</p3>
                             <p class="animated">11 91000-8056</p3>
                     </div>
