--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-md-5">
                     <div class="textBanner">
                         <h3 class="animated">Locação</h3>
-                        <p class="animated">Não importa se sua empresa é um negócio local ou uma companhia global, temos a solução certa para apoiar o seu crescimento..</p>
+                        <p class="animated">Não importa o tamanho da sua empresa, temos a solução certa para apoiar o seu crescimento.</p>
                         <p class="animated">Saiba mais</p3>
                             <p class="animated">11 91000-8056</p3>
                     </div>
