--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </div>
         </div>
+    </div>
     <div class="item banner1">
         <div class="overlay"></div>
         <div class="container">
