--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row">
                 <div class="col-md-5">
                     <div class="textBanner">
-                        <h3 class="animated">Câmera Térmica</h3>
+                        <h3 class="animated">Projetos Especiais</h3>
                         <p class="animated">Agilidade e controle em Projetos Especiais.</p>
                         <p class="animated">Saiba mais</p3>
                             <p class="animated">11 91000-8056</p3>
