--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="col-md-5">
                     <div class="textBanner">
                         <h3 class="animated">Projetos Especiais</h3>
-                        <p class="animated">Agilidade e controle em Projetos Especiais.</p>
+                        <p class="animated">Solução sob medida para seu projeto.</p>
                         <p class="animated">Saiba mais</p3>
                             <p class="animated">11 91000-8056</p3>
                     </div>
