alteração texto banner 1

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row">
                 <div class="col-md-5">
                     <div class="textBanner">
-                        <h3 class="animated">Projetos Especiais</h3>
-                        <p class="animated">Técnologia sob medida para seu projeto.</p>
+                        <h3 class="animated">PABX Virtual</h3>
+                        <p class="animated">Comunicação do seu escritório em qualquer lugar.</p>
                         <p class="animated">Saiba mais</p3>
                             <p class="animated">11 91000-8056</p3>
                     </div>
