--- a/index.html
+++ b/index.html
@@ -10,14 +10,10 @@
     <title>Home - Sotel Soluções Integradas</title>
     <base >
 
-    <!-- our project just needs Font Awesome Solid + Brands -->
-    <link href="assets/fontawesome-free-6.2.0-web/css/fontawesome.css" rel="stylesheet">
-    <link href="assets/fontawesome-free-6.2.0-web/css/brands.css" rel="stylesheet">
-    <link href="assets/fontawesome-free-6.2.0-web/css/solid.css" rel="stylesheet">
     <link rel="stylesheet" href="vendors/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&amp;display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <link rel="stylesheet" href="vendors/slick/slick.css">
     <link rel="stylesheet" href="vendors/slick/slick-theme.css">
     <link rel="stylesheet" href="vendors/videomodal/css/modal-video.min.css">
