--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <ul class="listTOP">
                             <li>
                                 <a href="https://www.facebook.com/soteltec" class="socialLinks" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                                <a href="maito:r.andradechg@gmail.com?subject = Orçamento&body = Olá, Gostaria de um orçamento." class="socialLinks" target="_blank"><i class="fas fa-envelope"></i></a>
+                                <a href="mailto:r.andradechg@gmail.com?subject = Orçamento&body = Olá, Gostaria de um orçamento." class="socialLinks" target="_blank"><i class="fas fa-envelope"></i></a>
                                 <a href="https://www.instagram.com/soteltec/" class="socialLinks" target="_blank"><i class="fab fa-instagram"></i></a>
                                 <a href="https://api.whatsapp.com/send/?phone=5511910008056&text=Ol%C3%A1,%20tudo%20bem?%20Eu%20gostaria%20de%20solicitar%20um%20or%C3%A7amento%20ou%20saber%20mais%20sobre%20a%20empresa&type=phone_number&app_absent=0" class="socialLinks" target="_blank"><i class="fab fa-whatsapp"></i></a>
                             </li>
