--- a/index.html
+++ b/index.html
@@ -412,15 +412,28 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="bloco-endereco">
                         <strong>Atendimento Comercial:</strong>
                         <span>Segunda a sexta: das 08:00 às 18:00.</span>                       
-                        <span>Telefone: (11) 3171-0549</span>
+                        <span>Telefone: (11) 91000-8056</span>
                         <span>Whatsapp: (11) 91000-8056</span>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-3">
                     <div class="bloco-endereco">
-                        <strong>Assistência Técnica:</strong>
+                        <strong>Assistência Técnica/Área do Cliente:Como funciona?
+                            1. Área do Cliente exclusiva da sua empresa com o e-mail e senha fornecido. Ex.: https://sotelsistemas.tk/area_cliente
+                            2. Ele envia a solicitação de atendimento
+                            3. Nossa equipe recebe a notificação no celular
+                            4. Atuação rapida no atendimento
+                            5. Nosso cliente recebe notificação de resposta por e-mail e pode responder o atendimento via Área do Cliente
+                            
+                            Veja os recursos que a ferramenta Área do Cliente pode oferecer para seus clientes:
+
+                            Atendimentos: Permite que clientes enviem e acompanhem solicitações de atendimento
+                            Boletos: Permite a visualização e impressão boletos de cobrança emitidos pela Sotel Tecnologia
+                            Pedidos: Permite a visualização, impressão e acompanhamento de pedidos emitidos pela Sotel Tecnologia
+                            Ordem de serviço: Permite a visualização, impressão e acompanhamento de Ordem de Serviço emitida pelo sistema
+                            Notas fiscais: Permite a visualização, impressão e acompanhamento das notas fiscais emitida pela Sotel Tecnologia</strong>
                         <span>Segunda a sexta: das 08:00 às 18:00.</span>                       
-                        <span>Telefone: (11) 3171-0549</span>
+                        <span>Telefone: (11) 91000-8056</span>
                         <span>Whatsapp: (11) 99425-3638</span>
                         <span>Whatsapp: (11) 99448-1381</span>
                     </div>
