area do cliente

--- a/index.html
+++ b/index.html
@@ -342,9 +342,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="row">
             <div class="col-12 col-md-8 wow fadeInUp">
                 <div class="boxMidiasSociais">
-                    <h3>Condomínio Autônomo</h3>
-                    <p>Dê aos condôminios e ao síndico o 
-                    controle total de todos os acontecimentos, <br/>
+                    <h3> Área do Cliente</h3>
+                    <p>Veja os recursos que a ferramenta "Área do Cliente pode oferecer: 
+
+                        Atendimentos: Permite que enviem e acompanhem solicitações de atendimento
+                        Boletos: Permite a visualização e impressão boletos de cobrança emitidos pelo sistema
+                        Pedidos: Permite a visualização, impressão e acompanhamento de pedidos emitidos pelo sistema
+                        Ordem de serviço: Permite a visualização, impressão e acompanhamento de Ordem de Serviço emitida pelo sistema
+                        Notas fiscais: Permite a visualização, impressão e acompanhamento das notas fiscais emitida pelo sistema, <br/>
                     tudo de forma simples e direta.</p>
 
                     <a href="https://api.whatsapp.com/send/?phone=5511910008056&text=Ol%C3%A1,%20tudo%20bem?%20Eu%20gostaria%20de%20solicitar%20um%20or%C3%A7amento%20ou%20saber%20mais%20sobre%20a%20empresa&type=phone_number&app_absent=0" class="socialLinks" target="_blank">Saiba mais</a>
