alteração area cliente

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-12 col-md-8 wow fadeInUp">
                 <div class="boxMidiasSociais">
                     <h3> Área do Cliente</h3>
-                    <p>Veja os recursos que a ferramenta "Área do Cliente pode oferecer:<br/>
+                    <p>Veja os recursos que a ferramenta "Área do Cliente pode oferecer":<br/>
 
                         Atendimentos: Permite que enviem e acompanhem solicitações de atendimento<br/>
                         Boletos: Permite a visualização e impressão boletos de cobrança emitidos pelo sistema<br/>
