--- a/index.html
+++ b/index.html
@@ -345,10 +345,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <h3> Área do Cliente</h3>
                     <p>
 
-                        Atendimentos: Permite que enviem e acompanhem solicitações de atendimento<br/>
-                        Boletos: Permite a visualização e impressão boletos de cobrança emitidos pelo sistema<br/>
-                        Pedidos: Permite a visualização, impressão e acompanhamento de pedidos emitidos pelo sistema<br/>
-                        Ordem de serviço: Permite a visualização, impressão e acompanhamento de Ordem de Serviço emitida pelo sistema<br/>
+                        Atendimentos: Permite que enviem e acompanhem solicitações de atendimento.<br/>
+                        Boletos: Permite a visualização e impressão boletos de cobrança emitidos pelo sistema.<br/>
+                        Pedidos: Permite a visualização, impressão e acompanhamento de pedidos emitidos pelo sistema.<br/>
+                        Ordem de serviço: Permite a visualização, impressão e acompanhamento de Ordem de Serviço emitida pelo sistema.<br/>
                         Notas fiscais: Permite a visualização, impressão e acompanhamento das notas fiscais emitida pelo sistema, <br/>
                     tudo de forma simples e direta.</p>
 
