--- a/index.html
+++ b/index.html
@@ -345,11 +345,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <h3> Área do Cliente</h3>
                     <p>
 
-                        Atendimentos: Permite que enviem e acompanhem solicitações de atendimento.<br/>
-                        Boletos: Permite a visualização e impressão boletos de cobrança emitidos pelo sistema.<br/>
-                        Pedidos: Permite a visualização, impressão e acompanhamento de pedidos emitidos pelo sistema.<br/>
-                        Ordem de serviço: Permite a visualização, impressão e acompanhamento de Ordem de Serviço emitida pelo sistema.<br/>
-                        Notas fiscais: Permite a visualização, impressão e acompanhamento das notas fiscais emitida pelo sistema, <br/>
+                        Atendimentos: Mais um canal de atendimento.<br/>
+                        Boletos: Acessar Boletos e Prorrogar.<br/>
+                        Pedidos: Acompanhamento de pedidos emitidos pelo sistema.<br/>
+                        Ordem de serviço: Abertura de Chamados.<br/>
+                        Notas fiscais: Acessar e baixar. <br/>
                     tudo de forma simples e direta.</p>
 
                     <a href="https://api.whatsapp.com/send/?phone=5511910008056&text=Ol%C3%A1,%20tudo%20bem?%20Eu%20gostaria%20de%20solicitar%20um%20or%C3%A7amento%20ou%20saber%20mais%20sobre%20a%20empresa&type=phone_number&app_absent=0" class="socialLinks" target="_blank">Saiba mais</a>
