--- a/index.html
+++ b/index.html
@@ -343,13 +343,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-12 col-md-8 wow fadeInUp">
                 <div class="boxMidiasSociais">
                     <h3> Área do Cliente</h3>
-                    <p>
+                    <p>Unificar e Simplificar.<br/>
 
-                        Atendimentos Simplificado.<br/>
+                        Atendimento Simplificado.<br/>
                         Baixar e Prorrogar Boletos.<br/>
                         Acompanhamento de Pedidos.<br/>
-                        Abertura de chamado técnico por Ordem de serviço.<br/>
-                        Acessar e baixar Notas fiscais.<br/>
+                        Abertura de chamado técnico por Ordem de Serviço.<br/>
+                        Acessar e baixar Notas Fiscais.<br/>
                     tudo de forma simples e direta.</p>
 
                     <a href="https://api.whatsapp.com/send/?phone=5511910008056&text=Ol%C3%A1,%20tudo%20bem?%20Eu%20gostaria%20de%20solicitar%20um%20or%C3%A7amento%20ou%20saber%20mais%20sobre%20a%20empresa&type=phone_number&app_absent=0" class="socialLinks" target="_blank">Saiba mais</a>
